--- a/TestKendoUI/Views/Home/Index.cshtml
+++ b/TestKendoUI/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<div id="example">
+<div>
     <div class="demo-section k-header">
         <div id="tabstrip">
             <ul>
@@ -21,26 +21,87 @@
             </ul>
             <div>
                 <div class="demo-section k-content">
+                    <div>
+                        <div class="textBox">
+                            <label for="currency">History:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <div class="textBox">
+                            <label for="currency">Algebra:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <div class="textBox">
+                            <label for="currency">Biology:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <button id="primaryTextButton" class="k-primary">Ok</button>
+                    </div>
                     <div id="chart" style="background: center no-repeat url('../content/shared/styles/world-map.png');"></div>
                 </div>
             </div>
             <div>
                 <div class="demo-section k-content">
+                    <div>
+                        <div class="textBox">
+                            <label for="currency">History:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <div class="textBox">
+                            <label for="currency">Algebra:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <div class="textBox">
+                            <label for="currency">Biology:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <button id="primaryTextButton" class="k-primary">Ok</button>
+                    </div>
                     <div id="chart2" style="background: center no-repeat url('../content/shared/styles/world-map.png');"></div>
                 </div>
             </div>
             <div>
                 <div class="demo-section k-content">
+                    <div>
+                        <div class="textBox">
+                            <label for="currency">History:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <div class="textBox">
+                            <label for="currency">Algebra:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <div class="textBox">
+                            <label for="currency">Biology:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <button id="primaryTextButton" class="k-primary">Ok</button>
+                    </div>
                     <div id="chart3" style="background: center no-repeat url('../content/shared/styles/world-map.png');"></div>
                 </div>
             </div>
             <div>
                 <div class="demo-section k-content">
+                    <div>
+                        <div class="textBox">
+                            <label for="currency">History:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <div class="textBox">
+                            <label for="currency">Algebra:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <div class="textBox">
+                            <label for="currency">Biology:</label>
+                            <input type="number" value="30" min="0" max="60" style="width: 100%;" />
+                        </div>
+                        <button id="primaryTextButton" class="k-primary">Ok</button>
+                    </div>
                     <div id="chart4" style="background: center no-repeat url('../content/shared/styles/world-map.png');"></div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 
     @section Scripts {
@@ -51,7 +112,7 @@
             function createChart() {
                 var settings = {
                     title: {
-                        text: "Students"
+                        text: "Assessment of progress"
                     },
                     legend: {
                         visible: false
@@ -116,9 +177,11 @@
                     }],
                 });
                 $("#chart4").kendoChart(settings4);
+                $("#primaryTextButton").kendoButton();
               
+             
             }
-
+         
             $(document).ready(createChart);
             $(document).bind("kendo:skinChange", createChart);
             $(document).ready(function () {
@@ -138,7 +201,12 @@
         <link rel="stylesheet" href="/kendo/kendoui/styles/kendo.default.min.css" />
 
         <style>
-            .sunny, .cloudy, .rainy {
+            div.textBox{
+                display:inline-block;
+                
+                margin: 10px;
+            }
+             .sunny, .cloudy, .rainy {
                 display: block;
                 margin: 30px auto 10px;
                 width: 128px;
@@ -180,4 +248,4 @@
             }
         </style>
     }
-</div>
+
