--- a/TestKendoUI/Views/Home/Index.cshtml
+++ b/TestKendoUI/Views/Home/Index.cshtml
@@ -12,8 +12,7 @@
                 @foreach (var student in Model.Students)
                 {
                     <li class="k-state-active">
-                        @student.
-
+                        @student
                     </li>
                 }
 
