--- a/TestKendoUI/Views/Home/Index.cshtml
+++ b/TestKendoUI/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Students";
 }
 
 @using TestKendoUI.Models
@@ -9,6 +9,7 @@
     <div class="demo-section k-header">
         <div id="tabstrip">
             <ul>
+                
                 @foreach (var student in Model.Students)
                 {
                     if (student == @Model.Students[0])
@@ -25,7 +26,8 @@
                     }
                 }
             </ul>
-            @for (int i = 1; i <= Model.Students.Count(); i++)
+
+            @for (int i = 1; i <= Model.Students.Count; i++)
 			{
 			    @Html.Partial("Tab", i);
 			}
@@ -91,8 +93,6 @@
             $(teg).kendoChart(settings);
         }
 
-
-
         $(document).ready(function () {
             initOkButton("#ok1", "#chart1");
             initOkButton("#ok2", "#chart2");
@@ -114,74 +114,26 @@
 
                     var inputs = $(e.event.target).parent().find('input');
 
-
                     createChart(chart, $(inputs[0]).val(), $(inputs[1]).val(), $(inputs[2]).val());
                 }
             });
         }
-
-        //$(document).bind("kendo:skinChange", createChart);
-        //$(document).ready(function () {
-        //    $("#tabstrip").kendoTabStrip({
-        //        animation: {
-        //            open: {
-        //                effects: "fadeIn"
-        //            }
-        //        }
-        //    });
-        //});
     </script>
 }
 
 @section styles {
-    <link rel="stylesheet" href="/kendo/kendoui/styles/kendo.common.min.css" />
-    <link rel="stylesheet" href="/kendo/kendoui/styles/kendo.default.min.css" />
+    <link rel="stylesheet" href="/kendo/kendoui/styles/kendo.common.min.css"/>
+    <link rel="stylesheet" href="/kendo/kendoui/styles/kendo.default.min.css"/>
 
     <style>
-        div.textBox {
-            display: inline-block;
-            margin: 10px;
-        }
+        
+         div.textBox {
+             display: inline-block;
+             margin: 10px;
+         }
 
-        .sunny, .cloudy, .rainy {
-            display: block;
-            margin: 30px auto 10px;
-            width: 128px;
-            height: 128px;
-            background: url('../content/web/tabstrip/weather.png') transparent no-repeat 0 0;
-        }
-
-        .cloudy {
-            background-position: -128px 0;
-        }
-
-        .rainy {
-            background-position: -256px 0;
-        }
-
-        .weather {
-            margin: 0 auto 30px;
-            text-align: center;
-        }
-
-        #tabstrip h2 {
-            font-weight: lighter;
-            font-size: 5em;
-            line-height: 1;
-            padding: 0 0 0 30px;
-            margin: 0;
-        }
-
-            #tabstrip h2 span {
-                background: none;
-                padding-left: 5px;
-                font-size: .3em;
-                vertical-align: top;
-            }
-
-        #tabstrip p {
-            margin: 0;
-            padding: 0;
+        .body-content {
+            margin-top: 50px;
         }
     </style>
 }
