--- a/TestKendoUI/Views/Shared/Tab.cshtml
+++ b/TestKendoUI/Views/Shared/Tab.cshtml
@@ -8,15 +8,15 @@
     <div class="demo-section k-content">
         <div>
             <div class="textBox">
-                <label for="currency">History:</label>
+                <label>History:</label>
                 <input type="number" value="30" min="0" max="60" style="width: 100%;" />
             </div>
             <div class="textBox">
-                <label for="currency">Algebra:</label>
+                <label>Algebra:</label>
                 <input type="number" value="30" min="0" max="60" style="width: 100%;" />
             </div>
             <div class="textBox">
-                <label for="currency">Biology:</label>
+                <label>Biology:</label>
                 <input type="number" value="30" min="0" max="60" style="width: 100%;" />
             </div>
             <button id="@idButton" class="k-primary">Ok</button>
